# prisma-engines

./: Cargo.toml
entityframework-json-gen/: Cargo.toml
entityframework-json-gen/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
psl/parser-database/src/: lib.rs
psl/psl-core/src/builtin_connectors/: mod.rs
psl/psl-core/src/datamodel_connector/: filters.rs
psl/psl/src/: lib.rs
schema-engine/connectors/schema-connector/src/: lib.rs
schema-engine/connectors/sql-schema-connector/: Cargo.toml
schema-engine/connectors/sql-schema-connector/src/: custom.rs  database_schema.rs  flavour.rs  lib.rs  migration_pair.rs  sql_migration.rs  sql_renderer.rs  sql_schema_differ.rs
schema-engine/connectors/sql-schema-connector/src/flavour/: postgres.rs
schema-engine/connectors/sql-schema-connector/src/sql_destructive_change_checker/: destructive_change_checker_flavour.rs
schema-engine/connectors/sql-schema-connector/src/sql_renderer/: postgres_renderer.rs
schema-engine/connectors/sql-schema-connector/src/sql_schema_calculator/: sql_schema_calculator_flavour.rs
schema-engine/connectors/sql-schema-connector/src/sql_schema_differ/: column.rs  differ_database.rs  sql_schema_differ_flavour.rs  table.rs
schema-engine/core/src/: lib.rs
schema-engine/datamodel-renderer/src/: lib.rs
schema-engine/mongodb-schema-describer/src/: lib.rs
schema-engine/sql-migration-tests/src/: multi_engine_test_api.rs
schema-engine/sql-schema-describer/src/: error.rs  lib.rs  walkers.rs
(+1 files in other folders)
