[package]
name = "entityframework-json-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
dmmf = { path = "../query-engine/dmmf" }
psl = { workspace = true, features = ["all"] }
serde_json.workspace = true
serde.workspace = true
psl-core = { path = "../psl/psl-core" }
schema-core = { path = "../schema-engine/core" }
sql-schema-connector = { path = "../schema-engine/connectors/sql-schema-connector" }
schema-connector = { path = "../schema-engine/connectors/schema-connector" }
sql-schema-describer = { path = "../schema-engine/sql-schema-describer" }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.81"
