[package]
name = "entityframework-json-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
psl = { workspace = true, features = ["all"] }
serde_json.workspace = true
serde.workspace = true
sql-schema-connector = { path = "../schema-engine/connectors/sql-schema-connector" }
sql-schema-describer = { path = "../schema-engine/sql-schema-describer" }
anyhow = "1.0.81"
